--- a/CSS/app.css
+++ b/CSS/app.css
@@ -42,3 +42,39 @@ color: cyan;
     text-decoration: none;
     margin-right: 10px;
 }
+.dom p{
+    color: cadetblue;
+    font-size: 20px;
+}
+.dom #form {
+    max-width: 500px;
+    margin: 0 auto;
+}
+.dom #form input{
+    display: block;
+    width: 100%;
+    border: none;
+    margin-bottom: 2rem;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+.dom #form input[type="sumbit"]{
+    background-color: aquamarine;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: azure;
+}
+.alerta{
+    padding: 1rem;
+    text-align: center;
+    color: antiquewhite;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+.alerta.error{
+background-color: cornsilk;
+}
+.alerta.exito{
+    background-color: beige;
+}
